--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "razzle": "^3.1.4",
+    "razzle-heroku": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
